tests/fixtures/invalid/bytes_lshift_bool.py
# Cannot left shift Bytes and Bool
x: bytes = b"hello" << True
